kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omicidx-fastapi
  labels:
    app: omicidx-fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: omicidx-fastapi
  template:
    metadata:
      labels:
        app: omicidx-fastapi
    spec:
      volumes:
        - name: omicidx-config
          secret:
            secretName: omicidx-config
      containers:
      - name: omicidx-fastapi
        image: gcr.io/isb-cgc-01-0006/omicidx-fastapi
        ports:
          - containerPort: 80
        volumeMounts:
          - name: omicidx-config
            readOnly: true
            mountPath: "/etc/omicidx-api"
