kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: omicidx-fastapi
  labels:
    service: omicidx-fastapi
spec:
  selector:
    app: omicidx-fastapi
  ports:
  - port: 5000
    targetPort: 80
